fix: my wallet spacing

--- a/frontend/src/components/Navigation/MyWallet/myWallet.scss
+++ b/frontend/src/components/Navigation/MyWallet/myWallet.scss
@@ -18,6 +18,10 @@
 		li.list-item {
 			padding-bottom: rem(8);
 
+			@include breakpoint-min(lg) {
+				padding-bottom: rem(1);
+			}
+
 			&:first-of-type .nav-link {
 				&::before {
 					content: url($data-svg-prefix + map-get($icons, 'calendar-large'));
@@ -56,11 +60,7 @@
 		}
 
 		hr {
-			margin: $text-spacer 0px;
-
-			@include breakpoint-min(lg) {
-				margin: $text-spacer-xs 0px;
-			}
+			margin: rem(12) 0px;
 		}
 
 		.nav-link {
@@ -74,7 +74,6 @@
 
 			@include breakpoint-min(lg) {
 				font-size: rem(14);
-				padding: rem(10) rem(14);
 				margin: 0px;
 			}
 
